# AoC-Solutions

./: .gitignore
2019 - Haskell/Day-01/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-02/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-03/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-04/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-05/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-06/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-07/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-08/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-09/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-10/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-11/: puzzle-a.hs  puzzle-b-arrays.hs  puzzle-b-trees.hs  puzzle-b.hs
2019 - Haskell/Day-12/: puzzle-a.hs  puzzle-b copy.hs  puzzle-b.hs
2019 - Haskell/Day-13/: input.txt  puzzle-a.hs  puzzle-b-auto.hs  puzzle-b.hs
2019 - Haskell/Day-14/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-15/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-16/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-17/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-18/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-19/: puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-20/: out.txt  puzzle-a.hs  puzzle-b.hs  test.txt
2019 - Haskell/Day-21/: puzzle-a-opt.hs  puzzle-a.hs  puzzle-b.hs
2019 - Haskell/Day-22/: puzzle-a.hs  puzzle-b.hs
2020 - Rust/: Cargo.toml
2020 - Rust/day-01/: Cargo.toml
2020 - Rust/day-01/src/: lib.rs  puzzle-b.rs
2020 - Rust/day-06/: Cargo.toml
2020 - Rust/day-06/src/: input.rs
tools/: aoc_stats.py  get_input.py
(+24 files in other folders)
