[package]
name = "day-01"
version = "0.1.0"
authors = ["Maciej Sapun <maciej.sapun@gmail.com>"]
edition = "2018"

[[bin]]
name = "a"
path = "src/puzzle-a.rs"

[[bin]]
name = "b"
path = "src/puzzle-b.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
