[package]
name = "day-06"
version = "0.1.0"
authors = ["Maciej Sapun <maciej.sapun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
rayon = "1.5.0"
regex = "1.4.2"
aoc-utils = { path = "../aoc-utils" }
